add InitUserTable and fix CRUD user
