# internal/router/router.go
@@ -11,11 +11,16 @@ import (
 
 func Router() *gin.Engine {
 	r := gin.Default()
+
 	docs.SwaggerInfo.BasePath = ""
 	r.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerFiles.Handler))
+
 	r.GET("/index", service.GetIndex)
-	// r.GET("/user/getUserList", service.GetUserList)
-	// r.GET("/user/createUser", service.CreateUser)
-	// r.GET("/user/deleteUser", service.DeleteUser)
+
+	r.POST("/user/createUser", service.CreateUser)
+	r.GET("/user/getUserList", service.GetUserList)
+	r.PUT("/user/updateUser", service.UpdateUser)
+	r.DELETE("/user/deleteUser", service.DeleteUser)
+
 	return r
 }
